@@ -1,5 +1,10 @@
 ﻿$Revision$
 	$Author$ $Date$
+	1. исправлен stack overflow при работе с длинными строками. Нужно проверить на x64 и выставить
+	правильное значение.
+
+#Revision: 1549
+	#Author: ctapmex Date: 2010-09-20 23:06:59 +0600 (Пн, 20 сен 2010)
 	1. исправлен stack overflow при уничтожении ParseCache. Патч работает, утечек памяти нет.
      Но для полного счастья нужно работу с ParseCache переделать. Но это wishe.
 
